commented the class like a boss
#nopointstaken #nofucksgiven

--- a/Project1/Project1.csproj
+++ b/Project1/Project1.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DistinctWord.cs" />
     <Compile Include="Driver.cs" />
+    <Compile Include="Paragraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sentence.cs" />
     <Compile Include="SentenceList.cs" />
