--- a/Project1/Project1.csproj
+++ b/Project1/Project1.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DistinctWord.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Paragraph.cs" />
+    <Compile Include="ParagraphLIst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sentence.cs" />
     <Compile Include="SentenceList.cs" />
