--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Choices.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
